# application_stopper

./: .gitignore  Cargo.toml  LICENSE  README.md  app_stopper.service  setting.toml
src/: config.rs  lib.rs  main.rs  sync.rs
