[package]
name = "app_stopper"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
crossterm = "0.24.0"
home = "0.5.3"
reqwest = { version = "0.11.11", features = ["json"] }
toml = "0.5.9"
serde_derive = "1.0"
"serde" = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"