[package]
name = "app_stopper"
version = "0.1.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
crossterm = "0.26.0"
home = "0.5.4"
reqwest = { version = "0.11.14", features = ["json"] }
toml = "0.7.2"
serde_derive = "1.0.152"
serde = "1.0.152"
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }
serde_json = "1.0.93"
octocrab = "0.18.1"
directories = "4.0"